--- a/AbdulrhmanBookStore/AbdulrhmanBookStore.csproj
+++ b/AbdulrhmanBookStore/AbdulrhmanBookStore.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AbdulrhmanBooks.DataAccess\AbdulrhmanBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\AbdulrhmanBooks.Models\AbdulrhmanBooks.Models.csproj" />
+  </ItemGroup>
+
 </Project>
